# DSarXive

./: .gitignore  Elsevier-parse.ipynb  README.md  Springer.ipynb  dotenv-0.0.5-py3-none-any.whl  exampleProg.py  extracter.ipynb  key.env  pyproject.toml  read_json.ipynb  sample.ipynb  sample.xml  test.ipynb
local-directory/: arXiv_pdf_manifest.xmlfdfdfadsf  arXiv_src_manifest.xml
