[tool.poetry]
name = "dsarxive"
version = "0.1.0"
description = ""
authors = ["Jersey <jerseyliu228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


