[tool.poetry]
name = "dsarxive"
version = "0.1.0"
description = ""
authors = ["Jersey <jerseyliu228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
elsapy = "^0.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
